# middleware/requiresAuth.js
@@ -4,7 +4,14 @@ app.get("/employees", requiresAuth(), (req, res) => {
   res.send(JSON.stringify(req.oidc.user));
 });
 
-/* app.get("/products", requiresAuth(), (req, res) => {
+app.get("/customers", requiresAuth(), (req, res) => {
   res.send(JSON.stringify(req.oidc.user));
 });
- */
+
+app.get("/movies", requiresAuth(), (req, res) => {
+  res.send(JSON.stringify(req.oidc.user));
+});
+
+app.get("/snacks", requiresAuth(), (req, res) => {
+  res.send(JSON.stringify(req.oidc.user));
+});
